syntax = "proto3";
package lsrm;

message Empty {}

message ProcessInfo {
  uint32 pid = 1;
  string name = 2;
  double cpu_percent = 3;
  uint64 mem_bytes = 4;
}

message SystemMetrics {
  double cpu_percent = 1;
  uint64 mem_total_bytes = 2;
  uint64 mem_used_bytes = 3;
  uint64 disk_total_bytes = 4;
  uint64 disk_used_bytes = 5;
  uint64 timestamp_unix_ms = 6;
  repeated ProcessInfo top_processes = 7;
  repeated string alerts = 8;
}

service Monitor {
  rpc GetOnce(Empty) returns (SystemMetrics);
  rpc Stream(Empty) returns (stream SystemMetrics);
}
